@@ -3,6 +3,12 @@
                             =======================
 
 
+ADVANCESCAN VERSION 1.18 2014/03
+================================
+
+* Updated to new autoconf/git format.
+
+
 ADVANCESCAN VERSION 1.17 2013/02
 ================================
 
